# stock_adk

./: .env.example  .gitignore  CLAUDE.md  README.md  TRADING_SYSTEM_SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt  test_a2a.py  test_news_agent.py
agents/: Dockerfile
agents/account_management/: __init__.py  agent.py
agents/balance_sheet/: a2a_server.py  agent.py  tools.py
agents/news_analysis/: a2a_server.py  agent.py  prompt.py  tools.py
backend/: Dockerfile  main.py  requirements.txt
backend/core/: orchestrator.py
config/: risk_rules.yaml  strategy.yaml
docker/loki/: loki-config.yml
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docker/promtail/: promtail-config.yml
docs/: QUANT_EVOLUTION.md  SWING_STRATEGY_DESIGN.md  TRADING_SYSTEM_SPEC.md
execution/: __init__.py  kiwoom_rest.py  order_manager.py  toss_rest.py  watcher.py  websocket_client.py
frontend/: index.html  package.json  vite.config.js
monitoring/: __init__.py  alerting.py  dashboard.py
orchestrator/: Dockerfile  __init__.py  agent.py  decision_engine.py  evolution_runner.py  extract_agent.py  prompt.py  scheduler.py  server.py  tools.py
scripts/: _common.sh  restart.sh  start.sh  stop.sh
shared/: __init__.py  config.py  database.py  logger.py  middleware.py  model_factory.py  models.py  notifications.py  redis_client.py  screener.py  strategy.py  ticker_utils.py
sub_agents/: Dockerfile
tests/: test_ladder.py  test_quant_guardrails.py  test_quant_indicators.py  test_quant_performance.py  test_quant_signal.py
utils/: kiwoom.py  vertex_ai_auth.py
(+69 files in other folders)
