[project]
name = "trading-system"
version = "0.1.0"
description = "Google ADK + A2A Protocol 기반 멀티에이전트 자동매매 시스템"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Agent Framework
    "google-adk[a2a]>=1.23",

    # Web Framework
    "uvicorn>=0.30.0",
    "fastapi>=0.115.0",

    # Data & Analysis
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b",
    "yfinance>=0.2.40",
    "pykrx>=1.0.45",

    # LLM
    "google-genai>=1.0.0",
    "google-cloud-aiplatform",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "psycopg2-binary",

    # HTTP
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "beautifulsoup4",

    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Logging
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

monitoring = [
    "streamlit>=1.37.0",
    "python-telegram-bot>=21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orchestrator*", "sub_agents*", "shared*", "execution*", "monitoring*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
